# redo

./: .dockerignore  .gitignore  AGENTS.md  Agents1.md  CLAUDE.md  CLOUDRUN_DEPLOY.md  CLOUD_BUILD_GUIDE.md  CLOUD_BUILD_SUMMARY.md  COMPLETE_IMPROVEMENT_REPORT.md  CPU_OPTIMIZED_DIARIZER_IMPROVEMENTS.md  DATAFLOW.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.txt  FILES_CREATED.md  GEMINI.md  IMPROVEMENT_CHECKLIST.md  IMPROVEMENT_SUMMARY.md  MODEL_MAP.md  README.md  SAVE_VM_IMAGE_GUIDE.md  WEB_API_README.md  WEB_APP_FIX_SUMMARY.md  WEB_APP_PROGRESS.md  agentscloud.md  cloudbuild-cloudrun.yaml  cloudbuild.yaml  constraints.txt  deploy-cloudrun.ps1  deploy-cloudrun.sh  examples_cpu_optimized_usage.py  models.zip.sha256  mypy-report.txt  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  setup.ps1  setup.sh  (+7 more)
.github/: copilot-instructions.md
docs/: CODEX_ENV_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  TODO.md  gate_db_integration.md  pipeline_optimization_opportunities.md  pipeline_stage_analysis.md
frontend/: package-lock.json  package.json  tailwind.config.ts
js/: zero_shot_local.mjs
outputs_cli_smoke/: diarized_transcript_readable.txt  diarized_transcript_with_emotion.csv  enhanced_summary.html  qc_report.json  speakers_summary.csv  summary.html  timeline.csv
outputs_cli_smoke_latest/: diarized_transcript_readable.txt  qc_report.json  timeline.csv
outputs_sample1_gate/: audio_health.csv  background_sed_summary.csv  conversation_metrics.csv  conversation_report.md  diarized_transcript_readable.txt  diarized_transcript_with_emotion.csv  events_timeline.csv  moments_to_review.csv  overlap_summary.csv  qc_report.json  segments.jsonl  speakers_summary.csv  summary.html  timeline.csv
outputs_smoke/: conversation_report.md  diarized_transcript_readable.txt  diarized_transcript_with_emotion.csv  qc_report.json
outputs_smoke_novad/: qc_report.json  summary.html
outputs_smoke_test/: diarized_transcript_with_emotion.csv  qc_report.json  segments.jsonl  speakers_summary.csv  summary.html
(+278 files in other folders)
