[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diaremot"
version = "2.2.0"
description = "CPU-only, long-form audio intelligence pipeline: Quiet-Boost, SED, diarization, ASR, affect (V/A/D + SER-8), text emotions (GoEmotions), intent, persistent speakers, and summary."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Timothy Leigh Troglin" }]
keywords = ["audio", "speech", "diarization", "transcription", "onnxruntime",
            "faster-whisper", "emotion-recognition", "sound-event-detection"]

# Runtime deps (CPU-only)
dependencies = [
  "numpy>=1.24,<2.0",
  "scipy>=1.10,<1.14",
  "soundfile>=0.12",
  "resampy>=0.4.3",
  "librosa==0.10.2.post1",          # modern API (librosa.resample)
  "numba>=0.58",                   # compatible with librosa 0.10.post1
  "pydub>=0.25",
  "tqdm>=4.66",
  "click>=8.1",
  "rich>=13.7",
  "pandas>=2.0,<2.3",
  "onnx>=1.15",
  "onnxruntime>=1.17",
  "huggingface-hub>=0.24",
  "transformers>=4.40,<4.46",     # text models (GoEmotions, BART-MNLI)
  "faster-whisper>=1.0.3",
  "ctranslate2>=4.2,<5.0",
  "scikit-learn>=1.3,<1.6",
  "python-dateutil>=2.8",
  "jinja2>=3.1",
  "markdown-it-py>=3.0",
]

[project.optional-dependencies]

dev = ["ruff>=0.5.0","mypy>=1.8","pytest>=8.0","pytest-cov>=5.0","types-requests","pre-commit>=3.6"]

[project.urls]


[project.scripts]
diaremot = "diaremot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["diaremot*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E","F","I","UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = ["^build/"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
